# openGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Shaders/: basic.frag  basic.vert  phong.vert  shadow.frag  shadow.vert
assets/shaders/: blinn_phong.frag  multi_light.frag  multi_light.vert  phong.vert  shadow_point.frag  shadow_point.geom
include/: Common.hpp  DragonData.h  GUI.hpp  Geometry.hpp  Light.hpp  Material.hpp  Mesh.hpp  Object3D.hpp  OpenGLHeaders.hpp  Scene.hpp  Shader.hpp  Utils.hpp
src/: Camera.cpp  Camera.hpp  GUI.cpp  GUI.hpp  Geometry.cpp  Light.cpp  Material.cpp  Mesh.cpp  Object3D.cpp  Scene.cpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.h  Utils.cpp  main.cpp
